--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <meta name="keywords" content="">
 <link rel="stylesheet" href="css/html5reset-1.6.1.css">
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="js/piechart/piechart.css">
 <script src="js/jquery/jquery-1.7.1.min.js"></script>
+<script src="js/piechart/piechart.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -20,6 +22,7 @@
 	<div>
 		<h2>タイトル</h2>
 		<p>yy/mm/dd - yy/mm/dd</p>
+		<div class="example"></div>
 	</div>
 
 	<div>
