add base design

--- a/index.html
+++ b/index.html
@@ -15,21 +15,50 @@
 <div id="wrapper">
 
 	<header>
-		<h1><a href="#">1000h</a></h1>
-		<a href="#">編集</a>
+		<h1>1000h</h1>
+		<a href="#" class="hdr_btn">編集</a>
 	</header>
 
-	<div>
-		<h2>タイトル</h2>
-		<p>yy/mm/dd - yy/mm/dd</p>
+	<div id="circle-area">
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="done"></span>
+		<span class="delay"></span>
+		<span class="delay"></span>
+		<span class="delay"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+	</div><!-- /#circle-area -->
+
+	<div id="status-panel">
+		<h2>英語学習</h2>
 		<div class="example"></div>
+		<p>yy/mm/dd - yy/mm/dd</p>
 	</div>
 
-	<div>
-		<span></span>
-	</div>
-
-	<div>
+	<div id="ad-area">
 		AD
 	</div>
 
