fix style of chart #1

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
 <title>1000h</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
+<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="css/html5reset-1.6.1.css">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="js/piechart/piechart.css">
 <script src="js/jquery/jquery-1.7.1.min.js"></script>
+<script src="js/jquery.tappable.js"></script>
 <script src="js/piechart/piechart.js"></script>
 </head>
 <body>
-<div id="wrapper">
+<div class="wrapper">
 
 	<header>
 		<h1>1000h</h1>
-		<a href="#" class="hdr_btn">編集</a>
+		<a href="#" class="hdr_btn_setting"></a>
 	</header>
 
-	<div id="circle-area">
+	<div class="circle-area"><div class="inner" style="margin-top:282px">
 		<span class="done"></span>
 		<span class="done"></span>
 		<span class="done"></span>
@@ -50,16 +52,45 @@
 		<span class="yet"></span>
 		<span class="yet"></span>
 		<span class="yet"></span>
-	</div><!-- /#circle-area -->
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+		<span class="yet"></span>
+	</div></div><!-- /#circle-area -->
 
-	<div id="status-panel">
-		<h2>英語学習</h2>
-		<div class="example"></div>
-		<p>yy/mm/dd - yy/mm/dd</p>
+	<div class="status-panel">
+		<h2>What you want to do</h2>
+		<div class="chart"></div>
+		<p class="period">yy/mm/dd<br>-<br>yy/mm/dd</p>
 	</div>
 
-	<div id="ad-area">
-		AD
+	<div class="ad-area">
 	</div>
 
 
