#2 add setting page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 	<header>
 		<h1>1000h</h1>
-		<a href="#" class="hdr_btn_setting"></a>
+		<a href="setting.html" class="hdr_btn_setting"></a>
 	</header>
 
-	<div id="circle-area"><div id="inner" style="margin-top:282px">
+	<div id="circles"><div id="inner" style="margin-top:282px">
 		<span class="done"><span></span></span>
 		<span class="done"><span></span></span>
 		<span class="done"><span></span></span>
@@ -89,12 +89,12 @@
 	</div></div><!-- /#circle-area -->
 
 	<div id="status-panel">
-		<h2>What you want to do</h2>
+		<h2 id="goaltxt">Goal</h2>
 		<div class="chart"></div>
-		<p id="period">yy/mm/dd<br>-<br>yy/mm/dd</p>
+		<p id="period"><span id="startdatetxt"></span><br>-<br><span id="goaldatetxt"></span></p>
 	</div>
 
-	<div class="ad-area">
+	<div class="ad">
 	</div>
 
 
